syntax = "proto3";

package sharehodl.dex.v1;

import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/sharehodl/sharehodl-blockchain/api/sharehodl/dex/v1";

// OrderType defines the type of trading order
enum OrderType {
  option (gogoproto.goproto_enum_prefix) = false;
  
  ORDER_TYPE_UNSPECIFIED = 0;
  ORDER_TYPE_LIMIT = 1;
  ORDER_TYPE_MARKET = 2;
  ORDER_TYPE_STOP = 3;
  ORDER_TYPE_STOP_LIMIT = 4;
  ORDER_TYPE_ATOMIC_SWAP = 5;      // Blockchain-native cross-asset swap
  ORDER_TYPE_FRACTIONAL = 6;       // Sub-unit share trading
  ORDER_TYPE_PROGRAMMATIC = 7;     // Smart contract triggered
}

// OrderSide defines whether the order is a buy or sell
enum OrderSide {
  option (gogoproto.goproto_enum_prefix) = false;
  
  ORDER_SIDE_UNSPECIFIED = 0;
  ORDER_SIDE_BUY = 1;
  ORDER_SIDE_SELL = 2;
}

// TimeInForce defines how long an order remains active
enum TimeInForce {
  option (gogoproto.goproto_enum_prefix) = false;
  
  TIME_IN_FORCE_UNSPECIFIED = 0;
  TIME_IN_FORCE_GTC = 1; // Good Till Cancel
  TIME_IN_FORCE_IOC = 2; // Immediate Or Cancel
  TIME_IN_FORCE_FOK = 3; // Fill Or Kill
  TIME_IN_FORCE_DAY = 4; // Day order
}

// OrderStatus defines the current status of an order
enum OrderStatus {
  option (gogoproto.goproto_enum_prefix) = false;
  
  ORDER_STATUS_UNSPECIFIED = 0;
  ORDER_STATUS_PENDING = 1;
  ORDER_STATUS_PARTIALLY_FILLED = 2;
  ORDER_STATUS_FILLED = 3;
  ORDER_STATUS_CANCELLED = 4;
  ORDER_STATUS_EXPIRED = 5;
  ORDER_STATUS_REJECTED = 6;
}

// Order represents a trading order
message Order {
  string order_id = 1;
  string trader = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  OrderType order_type = 3;
  OrderSide side = 4;
  string symbol = 5;
  uint64 quantity = 6;
  string price = 7 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  TimeInForce time_in_force = 8;
  OrderStatus status = 9;
  uint64 filled_quantity = 10;
  string average_fill_price = 11 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  google.protobuf.Timestamp created_at = 12 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
  google.protobuf.Timestamp updated_at = 13 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
  google.protobuf.Timestamp expires_at = 14 [
    (gogoproto.stdtime) = true
  ];
  
  // Blockchain-native features
  AtomicSwapDetails atomic_swap = 15;      // For cross-asset swaps
  FractionalDetails fractional = 16;       // For fractional trading  
  string stop_price = 17 [                 // For stop orders
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec"
  ];
  bool is_market_maker = 18;               // Market maker rebates
  string strategy_id = 19;                 // Programmatic trading
}

// Trade represents a completed trade
message Trade {
  string trade_id = 1;
  string symbol = 2;
  string buyer = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string seller = 4 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string buyer_order_id = 5;
  string seller_order_id = 6;
  uint64 quantity = 7;
  string price = 8 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  cosmos.base.v1beta1.Coin total_value = 9 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin buyer_fee = 10 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin seller_fee = 11 [(gogoproto.nullable) = false];
  google.protobuf.Timestamp executed_at = 12 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
}

// LiquidityPool represents a trading pair liquidity pool
message LiquidityPool {
  string pool_id = 1;
  string symbol_a = 2;
  string symbol_b = 3;
  cosmos.base.v1beta1.Coin reserve_a = 4 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin reserve_b = 5 [(gogoproto.nullable) = false];
  string total_shares = 6 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  string fee_rate = 7 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  google.protobuf.Timestamp created_at = 8 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
  repeated LiquidityProvider providers = 9 [(gogoproto.nullable) = false];
}

// LiquidityProvider represents a liquidity provider's position
message LiquidityProvider {
  string provider = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string shares = 2 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  cosmos.base.v1beta1.Coin provided_a = 3 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin provided_b = 4 [(gogoproto.nullable) = false];
  google.protobuf.Timestamp provided_at = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
}

// OrderBook represents the order book for a trading pair
message OrderBook {
  string symbol = 1;
  repeated OrderBookEntry bids = 2 [(gogoproto.nullable) = false];
  repeated OrderBookEntry asks = 3 [(gogoproto.nullable) = false];
  google.protobuf.Timestamp last_updated = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
}

// OrderBookEntry represents a price level in the order book
message OrderBookEntry {
  string price = 1 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  uint64 quantity = 2;
  uint64 order_count = 3;
}

// MarketData represents market statistics for a trading pair
message MarketData {
  string symbol = 1;
  string last_price = 2 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  string high_24h = 3 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  string low_24h = 4 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  string volume_24h = 5 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  string price_change_24h = 6 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  string price_change_percent_24h = 7 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
}

// Params defines the parameters for the dex module
message Params {
  string trading_fee_rate = 1 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  string liquidity_pool_fee_rate = 2 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  uint64 max_orders_per_account = 3;
  uint64 order_expiry_blocks = 4;
  string min_order_size = 5 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  bool market_making_enabled = 6;
  string market_maker_rebate_rate = 7 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
}

// AtomicSwapDetails for cross-asset instant swaps
message AtomicSwapDetails {
  string target_symbol = 1;               // Asset to swap to (e.g. "HODL")
  string exchange_rate = 2 [              // Dynamic exchange rate
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  string slippage_tolerance = 3 [         // Max price movement tolerance
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
}

// FractionalDetails for sub-unit share trading
message FractionalDetails {
  string fractional_quantity = 1 [        // e.g. 0.5 shares
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  string min_fraction = 2 [               // Minimum tradable fraction
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
}

// TradingStrategy for programmable trading
message TradingStrategy {
  string strategy_id = 1;
  string name = 2;
  string owner = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  repeated TriggerCondition conditions = 4 [(gogoproto.nullable) = false];
  repeated TradingAction actions = 5 [(gogoproto.nullable) = false];
  string max_exposure = 6 [               // Maximum position size
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  bool is_active = 7;
  google.protobuf.Timestamp created_at = 8 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
}

// TriggerCondition for strategy automation
message TriggerCondition {
  string symbol = 1;
  string price_threshold = 2 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  string condition_type = 3;              // "ABOVE", "BELOW", "EQUALS"
  bool is_percentage = 4;                 // Price change vs absolute price
}

// TradingAction for strategy execution
message TradingAction {
  OrderType action_type = 1;
  string symbol = 2;
  OrderSide side = 3;
  string quantity = 4 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  string price_offset = 5 [               // Offset from trigger price
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec"
  ];
}

// GenesisState defines the dex module's genesis state
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated Order orders = 2 [(gogoproto.nullable) = false];
  repeated Trade trades = 3 [(gogoproto.nullable) = false];
  repeated LiquidityPool pools = 4 [(gogoproto.nullable) = false];
  repeated OrderBook order_books = 5 [(gogoproto.nullable) = false];
  repeated MarketData market_data = 6 [(gogoproto.nullable) = false];
  repeated TradingStrategy strategies = 7 [(gogoproto.nullable) = false];
}