package e2e

import (
	"context"
	"encoding/json"
	"fmt"
	"os"
	"os/exec"
	"path/filepath"
	"testing"
	"time"

	"github.com/cosmos/cosmos-sdk/client"
	"github.com/cosmos/cosmos-sdk/codec"
	"github.com/cosmos/cosmos-sdk/server"
	"github.com/cosmos/cosmos-sdk/testutil/network"
	"github.com/cosmos/cosmos-sdk/types/module"
	"github.com/stretchr/testify/require"
	"github.com/stretchr/testify/suite"

	"sharehodl/app"
	hodltypes "sharehodl/x/hodl/types"
	equitytypes "sharehodl/x/equity/types"
	dextypes "sharehodl/x/dex/types"
	governancetypes "sharehodl/x/governance/types"
)

// E2ETestSuite defines the end-to-end test suite for ShareHODL blockchain
type E2ETestSuite struct {
	suite.Suite

	cfg     network.Config
	network *network.Network
	ctx     context.Context
	cancel  context.CancelFunc

	// Test configuration
	testDir        string
	dockerCompose  string
	testData       *TestData
	metrics        *TestMetrics
	scenarios      []TestScenario
	
	// Service endpoints
	apiEndpoint    string
	rpcEndpoint    string
	grpcEndpoint   string
	explorerURL    string
	
	// Test accounts
	validatorAccount  TestAccount
	businessAccount   TestAccount
	investorAccount1  TestAccount
	investorAccount2  TestAccount
	
	// Module clients
	hodlClient      *HODLClient
	equityClient    *EquityClient
	dexClient       *DEXClient
	governanceClient *GovernanceClient
}

// TestData contains all test data and configurations
type TestData struct {
	Companies    []TestCompany    `json:"companies"`
	Tokens       []TestToken      `json:"tokens"`
	Orders       []TestOrder      `json:"orders"`
	Proposals    []TestProposal   `json:"proposals"`
	Scenarios    []TestScenario   `json:"scenarios"`
	Performance  TestPerformance  `json:"performance"`
}

// TestAccount represents a test account
type TestAccount struct {
	Name       string `json:"name"`
	Address    string `json:"address"`
	Mnemonic   string `json:"mnemonic"`
	PrivKey    string `json:"priv_key"`
	Balance    string `json:"balance"`
	Role       string `json:"role"`
}

// TestCompany represents a test company for equity testing
type TestCompany struct {
	Name        string  `json:"name"`
	Symbol      string  `json:"symbol"`
	TotalShares uint64  `json:"total_shares"`
	Industry    string  `json:"industry"`
	ValuationUSD float64 `json:"valuation_usd"`
	Verified    bool    `json:"verified"`
}

// TestToken represents a test token configuration
type TestToken struct {
	Denom      string `json:"denom"`
	Name       string `json:"name"`
	Supply     string `json:"supply"`
	Decimals   uint32 `json:"decimals"`
	TokenType  string `json:"token_type"`
}

// TestOrder represents a test trading order
type TestOrder struct {
	OrderType    string  `json:"order_type"`
	Side         string  `json:"side"`
	Symbol       string  `json:"symbol"`
	Quantity     uint64  `json:"quantity"`
	Price        float64 `json:"price"`
	TraderAddr   string  `json:"trader_addr"`
	TimeInForce  string  `json:"time_in_force"`
}

// TestProposal represents a test governance proposal
type TestProposal struct {
	Type        string `json:"type"`
	Title       string `json:"title"`
	Description string `json:"description"`
	Proposer    string `json:"proposer"`
	Deposit     string `json:"deposit"`
	VotingPeriod time.Duration `json:"voting_period"`
}

// TestScenario defines a complete test scenario
type TestScenario struct {
	Name         string        `json:"name"`
	Description  string        `json:"description"`
	Prerequisites []string     `json:"prerequisites"`
	Steps        []TestStep    `json:"steps"`
	ExpectedResults []string   `json:"expected_results"`
	Timeout      time.Duration `json:"timeout"`
	Critical     bool         `json:"critical"`
}

// TestStep defines an individual test step
type TestStep struct {
	Name        string                 `json:"name"`
	Action      string                 `json:"action"`
	Parameters  map[string]interface{} `json:"parameters"`
	Expected    map[string]interface{} `json:"expected"`
	Timeout     time.Duration         `json:"timeout"`
	RetryCount  int                   `json:"retry_count"`
}

// TestMetrics collects test execution metrics
type TestMetrics struct {
	StartTime       time.Time             `json:"start_time"`
	EndTime         time.Time             `json:"end_time"`
	Duration        time.Duration         `json:"duration"`
	TotalTests      int                   `json:"total_tests"`
	PassedTests     int                   `json:"passed_tests"`
	FailedTests     int                   `json:"failed_tests"`
	SkippedTests    int                   `json:"skipped_tests"`
	TestResults     []TestResult          `json:"test_results"`
	Performance     PerformanceMetrics    `json:"performance"`
	ResourceUsage   ResourceMetrics       `json:"resource_usage"`
	SecurityResults SecurityTestResults   `json:"security_results"`
}

// TestResult represents the result of a single test
type TestResult struct {
	Name        string        `json:"name"`
	Status      string        `json:"status"` // PASS, FAIL, SKIP
	Duration    time.Duration `json:"duration"`
	Error       string        `json:"error,omitempty"`
	Details     string        `json:"details,omitempty"`
	Assertions  int          `json:"assertions"`
	StartTime   time.Time    `json:"start_time"`
	EndTime     time.Time    `json:"end_time"`
}

// PerformanceMetrics tracks performance-related metrics
type PerformanceMetrics struct {
	TransactionThroughput float64 `json:"transaction_throughput"` // TPS
	BlockTime             float64 `json:"block_time"`             // seconds
	APIResponseTime       float64 `json:"api_response_time"`      // milliseconds
	MemoryUsage          int64   `json:"memory_usage"`           // bytes
	CPUUsage             float64 `json:"cpu_usage"`              // percentage
	DiskUsage            int64   `json:"disk_usage"`             // bytes
	NetworkLatency       float64 `json:"network_latency"`        // milliseconds
}

// ResourceMetrics tracks resource consumption
type ResourceMetrics struct {
	MaxMemoryMB     float64 `json:"max_memory_mb"`
	MaxCPUPercent   float64 `json:"max_cpu_percent"`
	DiskIOPS        float64 `json:"disk_iops"`
	NetworkRxMB     float64 `json:"network_rx_mb"`
	NetworkTxMB     float64 `json:"network_tx_mb"`
	PostgreSQLConns int     `json:"postgresql_connections"`
	RedisConns      int     `json:"redis_connections"`
}

// SecurityTestResults tracks security test outcomes
type SecurityTestResults struct {
	VulnerabilitiesFound int      `json:"vulnerabilities_found"`
	SecurityScore        float64  `json:"security_score"`
	CriticalFindings     []string `json:"critical_findings"`
	WarningFindings      []string `json:"warning_findings"`
	InfoFindings         []string `json:"info_findings"`
	ComplianceStatus     string   `json:"compliance_status"`
}

// TestPerformance defines performance test parameters
type TestPerformance struct {
	LoadTestDuration   time.Duration `json:"load_test_duration"`
	MaxConcurrentUsers int          `json:"max_concurrent_users"`
	TransactionTarget  int          `json:"transaction_target"`
	MemoryLimitMB     int          `json:"memory_limit_mb"`
	CPULimitPercent   float64      `json:"cpu_limit_percent"`
}

// SetupSuite initializes the end-to-end test environment
func (s *E2ETestSuite) SetupSuite() {
	s.T().Log("üöÄ Setting up ShareHODL E2E Test Suite")
	
	s.ctx, s.cancel = context.WithCancel(context.Background())
	
	// Create temporary test directory
	var err error
	s.testDir, err = os.MkdirTemp("", "sharehodl-e2e-*")
	require.NoError(s.T(), err)
	s.T().Logf("üìÅ Test directory: %s", s.testDir)
	
	// Initialize test metrics
	s.metrics = &TestMetrics{
		StartTime:    time.Now(),
		TestResults:  []TestResult{},
		Performance:  PerformanceMetrics{},
		ResourceUsage: ResourceMetrics{},
		SecurityResults: SecurityTestResults{},
	}
	
	// Load test data
	s.loadTestData()
	
	// Setup test network
	s.setupTestNetwork()
	
	// Setup test accounts
	s.setupTestAccounts()
	
	// Initialize module clients
	s.initializeClients()
	
	// Deploy and start services
	s.deployTestEnvironment()
	
	// Wait for services to be ready
	s.waitForServicesReady()
	
	s.T().Log("‚úÖ E2E Test Suite setup completed")
}

// TearDownSuite cleans up the test environment
func (s *E2ETestSuite) TearDownSuite() {
	s.T().Log("üßπ Tearing down E2E Test Suite")
	
	// Finalize metrics
	s.metrics.EndTime = time.Now()
	s.metrics.Duration = s.metrics.EndTime.Sub(s.metrics.StartTime)
	
	// Save test results
	s.saveTestResults()
	
	// Stop services
	s.stopTestEnvironment()
	
	// Cleanup test directory
	if s.testDir != "" {
		os.RemoveAll(s.testDir)
	}
	
	// Cancel context
	if s.cancel != nil {
		s.cancel()
	}
	
	// Stop network
	if s.network != nil {
		s.network.Cleanup()
	}
	
	s.T().Log("‚úÖ E2E Test Suite cleanup completed")
}

// loadTestData loads test data from configuration files
func (s *E2ETestSuite) loadTestData() {
	s.T().Log("üìä Loading test data")
	
	// Load test data from JSON file
	testDataFile := filepath.Join("tests", "e2e", "testdata", "test_data.json")
	data, err := os.ReadFile(testDataFile)
	if err != nil {
		// Create default test data if file doesn't exist
		s.testData = s.createDefaultTestData()
		s.saveTestData()
		return
	}
	
	s.testData = &TestData{}
	err = json.Unmarshal(data, s.testData)
	require.NoError(s.T(), err)
	
	s.T().Logf("üìä Loaded test data: %d companies, %d tokens, %d orders, %d scenarios",
		len(s.testData.Companies), len(s.testData.Tokens), 
		len(s.testData.Orders), len(s.testData.Scenarios))
}

// createDefaultTestData creates default test data
func (s *E2ETestSuite) createDefaultTestData() *TestData {
	return &TestData{
		Companies: []TestCompany{
			{
				Name: "ShareHODL Corp", Symbol: "SHODL", TotalShares: 1000000,
				Industry: "Blockchain Technology", ValuationUSD: 100000000, Verified: true,
			},
			{
				Name: "TechStart Inc", Symbol: "TECH", TotalShares: 500000,
				Industry: "Software", ValuationUSD: 50000000, Verified: true,
			},
			{
				Name: "GreenEnergy LLC", Symbol: "GREEN", TotalShares: 2000000,
				Industry: "Renewable Energy", ValuationUSD: 200000000, Verified: false,
			},
		},
		Tokens: []TestToken{
			{Denom: "hodl", Name: "HODL Stablecoin", Supply: "1000000000000", Decimals: 6, TokenType: "stablecoin"},
			{Denom: "shodl", Name: "ShareHODL Token", Supply: "100000000000", Decimals: 6, TokenType: "governance"},
		},
		Performance: TestPerformance{
			LoadTestDuration:   30 * time.Minute,
			MaxConcurrentUsers: 1000,
			TransactionTarget:  10000,
			MemoryLimitMB:     8192,
			CPULimitPercent:   80.0,
		},
	}
}

// saveTestData saves test data to file
func (s *E2ETestSuite) saveTestData() {
	testDataFile := filepath.Join("tests", "e2e", "testdata", "test_data.json")
	os.MkdirAll(filepath.Dir(testDataFile), 0755)
	
	data, _ := json.MarshalIndent(s.testData, "", "  ")
	os.WriteFile(testDataFile, data, 0644)
}

// setupTestNetwork configures the test network
func (s *E2ETestSuite) setupTestNetwork() {
	s.T().Log("üåê Setting up test network")
	
	// Configure network for testing
	cfg := network.DefaultConfig()
	cfg.NumValidators = 3
	cfg.BondDenom = hodltypes.DefaultDenom
	cfg.StakingTokens = hodltypes.DefaultStakingTokens
	cfg.BondedTokens = hodltypes.DefaultBondedTokens
	cfg.PruningStrategy = "nothing"
	cfg.CleanupDir = true
	cfg.SigningAlgo = "secp256k1"
	cfg.KeyringOptions = []string{}
	cfg.PrintMnemonic = false
	cfg.GenesisState = app.ModuleBasics.DefaultGenesis(cfg.Codec)
	
	s.cfg = cfg
	
	// Create network
	var err error
	s.network, err = network.New(s.T(), s.T().TempDir(), cfg)
	require.NoError(s.T(), err)
	
	// Set endpoints
	val := s.network.Validators[0]
	s.apiEndpoint = fmt.Sprintf("http://%s", val.APIAddress)
	s.rpcEndpoint = fmt.Sprintf("http://%s", val.RPCAddress)
	s.grpcEndpoint = val.AppConfig.GRPC.Address
	
	s.T().Logf("üåê Test network ready - API: %s, RPC: %s", s.apiEndpoint, s.rpcEndpoint)
}

// setupTestAccounts creates and funds test accounts
func (s *E2ETestSuite) setupTestAccounts() {
	s.T().Log("üë§ Setting up test accounts")
	
	// Create test accounts with different roles
	accounts := []struct {
		name string
		role string
		balance string
	}{
		{"validator", "validator", "10000000000hodl"},
		{"business", "business_owner", "5000000000hodl"},
		{"investor1", "investor", "1000000000hodl"},
		{"investor2", "investor", "1000000000hodl"},
	}
	
	for _, acc := range accounts {
		account := s.createTestAccount(acc.name, acc.role, acc.balance)
		switch acc.name {
		case "validator":
			s.validatorAccount = account
		case "business":
			s.businessAccount = account
		case "investor1":
			s.investorAccount1 = account
		case "investor2":
			s.investorAccount2 = account
		}
	}
	
	s.T().Log("üë§ Test accounts created and funded")
}

// createTestAccount creates a test account with specified balance
func (s *E2ETestSuite) createTestAccount(name, role, balance string) TestAccount {
	// Implementation would create account using the CLI or direct key generation
	// For now, return a mock account
	return TestAccount{
		Name:     name,
		Address:  fmt.Sprintf("sharehodl1%s", name), // Placeholder
		Role:     role,
		Balance:  balance,
	}
}

// initializeClients initializes module-specific test clients
func (s *E2ETestSuite) initializeClients() {
	s.T().Log("üîå Initializing module clients")
	
	clientCtx := client.Context{}.
		WithCodec(s.cfg.Codec).
		WithChainID(s.cfg.ChainID).
		WithNodeURI(s.rpcEndpoint)
	
	s.hodlClient = NewHODLClient(clientCtx)
	s.equityClient = NewEquityClient(clientCtx)
	s.dexClient = NewDEXClient(clientCtx)
	s.governanceClient = NewGovernanceClient(clientCtx)
	
	s.T().Log("üîå Module clients initialized")
}

// deployTestEnvironment deploys the test environment using Docker Compose
func (s *E2ETestSuite) deployTestEnvironment() {
	s.T().Log("üê≥ Deploying test environment")
	
	// Copy docker-compose files to test directory
	composeFile := filepath.Join(s.testDir, "docker-compose.test.yml")
	s.dockerCompose = composeFile
	
	// Create test-specific docker-compose configuration
	s.createTestDockerCompose()
	
	// Deploy using docker-compose
	cmd := exec.Command("docker-compose", "-f", composeFile, "up", "-d")
	cmd.Dir = s.testDir
	output, err := cmd.CombinedOutput()
	if err != nil {
		s.T().Logf("Docker compose output: %s", string(output))
		require.NoError(s.T(), err)
	}
	
	s.T().Log("üê≥ Test environment deployed")
}

// createTestDockerCompose creates a test-specific docker-compose configuration
func (s *E2ETestSuite) createTestDockerCompose() {
	compose := `version: '3.8'
services:
  sharehodl-test:
    image: sharehodl:test
    container_name: sharehodl-test-node
    ports:
      - "26656:26656"
      - "26657:26657" 
      - "1317:1317"
      - "9090:9090"
    environment:
      - CHAIN_ID=sharehodl-testnet
      - VALIDATOR_NAME=test-validator
    volumes:
      - ./genesis.json:/root/.sharehodl/config/genesis.json
    healthcheck:
      test: ["CMD", "sharehodld", "status"]
      interval: 30s
      timeout: 10s
      retries: 5

  postgres-test:
    image: postgres:15
    container_name: sharehodl-test-db
    ports:
      - "5433:5432"
    environment:
      POSTGRES_DB: sharehodl_test
      POSTGRES_USER: sharehodl
      POSTGRES_PASSWORD: sharehodl2024!
    tmpfs:
      - /var/lib/postgresql/data

  redis-test:
    image: redis:7-alpine
    container_name: sharehodl-test-redis
    ports:
      - "6380:6379"
    command: redis-server --requirepass sharehodl2024!
    tmpfs:
      - /data`

	err := os.WriteFile(s.dockerCompose, []byte(compose), 0644)
	require.NoError(s.T(), err)
}

// waitForServicesReady waits for all services to be healthy
func (s *E2ETestSuite) waitForServicesReady() {
	s.T().Log("‚è≥ Waiting for services to be ready")
	
	timeout := 5 * time.Minute
	ctx, cancel := context.WithTimeout(s.ctx, timeout)
	defer cancel()
	
	services := []string{
		s.apiEndpoint + "/cosmos/base/tendermint/v1beta1/node_info",
		"http://localhost:5433", // postgres
		"http://localhost:6380", // redis
	}
	
	for _, service := range services {
		s.waitForService(ctx, service)
	}
	
	s.T().Log("‚úÖ All services are ready")
}

// waitForService waits for a specific service to be ready
func (s *E2ETestSuite) waitForService(ctx context.Context, service string) {
	for {
		select {
		case <-ctx.Done():
			s.T().Fatalf("Timeout waiting for service: %s", service)
			return
		default:
			// Implementation would check service health
			time.Sleep(2 * time.Second)
			return // Placeholder - assume service is ready
		}
	}
}

// stopTestEnvironment stops the test environment
func (s *E2ETestSuite) stopTestEnvironment() {
	if s.dockerCompose != "" {
		cmd := exec.Command("docker-compose", "-f", s.dockerCompose, "down", "-v")
		cmd.Run()
	}
}

// saveTestResults saves test results to file
func (s *E2ETestSuite) saveTestResults() {
	resultsFile := filepath.Join(s.testDir, "test_results.json")
	data, _ := json.MarshalIndent(s.metrics, "", "  ")
	os.WriteFile(resultsFile, data, 0644)
	
	s.T().Logf("üìä Test results saved to: %s", resultsFile)
	s.T().Logf("üìä Test Summary: %d total, %d passed, %d failed, %d skipped",
		s.metrics.TotalTests, s.metrics.PassedTests, 
		s.metrics.FailedTests, s.metrics.SkippedTests)
}

// RunE2ETests executes the complete end-to-end test suite
func RunE2ETests(t *testing.T) {
	suite.Run(t, new(E2ETestSuite))
}